--- a/landing.html.html
+++ b/landing.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stipjen Aviation | Private Flight</title>
+    <title>Stjepan Aviation | Private Flight</title>
     <style>
         :root {
             --primary: #1a3e72;  /* Deep navy blue */
