--- a/landing.html.html
+++ b/landing.html.html
@@ -152,7 +152,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 style="font-size: 1.8rem;">Stipjen Aviation <span class="private-badge">Private</span></h1>
+            <h1 style="font-size: 1.8rem;">Stjepan Aviation <span class="private-badge">Private</span></h1>
             <p class="subtitle" style="font-size: 1.1rem;">Cincinnati (CVG) ✈ Monterey (MRY)</p>
             <div class="flight-status" style="font-size: 0.9rem;">
                 <i class="fas fa-circle" style="color: #4CAF50; margin-right: 8px;"></i>
@@ -197,7 +197,7 @@
                 <img src="2345mary.jpg" alt="Mary Wallow" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 2px solid white; box-shadow: 0 3px 8px rgba(0,0,0,0.1); margin-right: 15px;">
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 3px;">Mary Cecilia Wallow</h3>
-                    <p style="font-size: 0.8rem; color: #666;">Guest of Hauser Stipjen</p>
+                    <p style="font-size: 0.8rem; color: #666;">Guest of Hauser Stjepan</p>
                 </div>
             </div>
             
@@ -236,13 +236,13 @@
             </h2>
             <img src="plane.jpg" alt="Private Jet" style="width: 100%; border-radius: 8px; margin: 10px 0; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
             <div style="background: #f8f9fa; padding: 12px; border-radius: 6px; border-left: 3px solid var(--secondary); font-size: 0.9rem; line-height: 1.5;">
-                <p>This Embraer E175 (Tail #N123HS) is privately owned by Hauser Stipjen.</p>
+                <p>This Embraer E175 (Tail #N123HS) is privately owned by Hauser Stjepan.</p>
             </div>
         </div>
     </div>
     
     <footer style="text-align: center; margin-top: 40px; padding: 20px; color: #666; font-size: 0.8rem; border-top: 1px solid #eee;">
-        <p>Stipjen Aviation Private Flight • CVG to MRY • June 15, 2025</p>
+        <p>Stjepan Aviation Private Flight • CVG to MRY • June 15, 2025</p>
         <p style="margin-top: 5px;">Confirmations: <a href="https://wa.me/14808102893" style="color: var(--primary);">WhatsApp +1 (480) 810-2893</a></p>
     </footer>
 
